# negotiate-ai-backend

./: .gitignore  Dockerfile  LEARNING.md  README.md  pyproject.toml  render.yaml  requirements.txt  run.py
data/: negotiate.db
src/: __init__.py  config.py  main.py  models.py  negotiator.py  orchestrator.py  providers.py
src/auth/: __init__.py  dependencies.py  jwt.py  password.py  routes.py
src/database/: __init__.py  connection.py  schema.py  seed.py
src/repositories/: __init__.py  company_repo.py  session_repo.py
src/voice/: __init__.py  call_manager.py  routes.py  speech.py  twilio_client.py  voice_negotiator.py
tests/: __init__.py  test_api.py  test_models.py
