[project]
name = "negotiate-ai-backend"
version = "0.1.0"
description = "Multi-Agent Negotiation System - AI agents that negotiate deals in parallel"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "httpx>=0.27.0",
    "pydantic-ai>=0.0.39",
    "python-dotenv>=1.0.0",
    "sse-starlette>=2.0.0",
    "uvicorn[standard]>=0.30.0",
]

[project.scripts]
negotiate-ai = "src.main:app"

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]
